--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -80,3 +80,6 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update && apt-get -y install apt-tran
 #    jq -r '.plugins[] | .shortName +":"+ .version' | sort > plugins.txt
 #
 RUN install-plugins.sh $( paste -sd' ' /usr/share/jenkins/plugins.txt )
+
+#provide executable permission recursively
+chmod -R a+x var
